<resources>
    <string name="app_name">Travel Visualizer</string>
    <string name="title_activity_login">Sign in</string>

    <string name="item_home">Home</string>
    <string name="item_trip">Trip</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">User with specified login not found</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="title_activity_registration">Registration</string>
    <string name="error_empty_username">Username cannot be empty</string>
    <string name="error_user_registered">User with this login or email already registered</string>
    <string name="profile">Profile</string>
    <string name="button_show_trips">Trips</string>
    <string name="button_profile">Profile</string>
    <string name="button_saved_routes">Saved routes</string>
    <string name="button_archived_routes">Archived routes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_place">Add place</string>
    <string name="button_mark_me">I\'m in right place</string>
    <string name="button_place_creation_open_description">Next</string>
    <string name="button_place_creation_cancel">Cancel</string>
    <string name="place_description_edit_text_hint">Place description</string>
    <string name="button_description_previous_step"><![CDATA[< Back]]></string>
    <string name="button_description_cancel">Cancel</string>
    <string name="button_description_next_step"><![CDATA[Next >]]></string>

    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="image_share">Share Image</string>
    <string name="button_create_photos">Take photo</string>
    <string name="fragment_place_photos_next_button"><![CDATA[Next >]]></string>
    <string name="fragment_place_photos_back_button"><![CDATA[< Back]]></string>
    <string name="fragment_place_photos_cancel_button">Cancel</string>
    <string name="button_load_photos">Load</string>
    <string name="popup_photos_menu_delete_action">Delete</string>
    <string name="popup_place_add_to_trip_new_trip_action">Create Trip</string>
    <string name="popup_travel_show_menu_action">Show</string>
    <string name="travel_share_scan_qr_tooltip">Scan QR code to retrieve travel on your device. Or enter usernames below manually</string>
    <string name="button_shared_user_add">Add</string>
    <string name="button_home_exit">Exit</string>
</resources>
