<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.place.PlacePhotosFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/place_add_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_place_photos_photo_preview"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fragment_place_photos_taken_photos_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/button_create_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create_photos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragment_place_photos_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_place_photos_cancel_button" />

            <Button
                android:id="@+id/fragment_place_photos_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_place_photos_back_button" />

            <Button
                android:id="@+id/fragment_place_photos_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_place_photos_next_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
